--- a/android/app/src/main/res/layout/item_chat_other.xml
+++ b/android/app/src/main/res/layout/item_chat_other.xml
@@ -52,15 +52,14 @@
             <TextView
                 android:id="@+id/tv_chat_other_message"
                 style="@style/Theme.AppCompat.TextView.Regular.Size16"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
+                app:layout_constrainedWidth="true"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="100dp"
-                android:layout_weight="0"
                 android:background="@drawable/rect_gray03_fill_16"
                 android:paddingHorizontal="16dp"
                 android:paddingVertical="11dp"
                 android:textColor="@color/black"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/tv_chat_other_time"
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -70,16 +69,15 @@
             <TextView
                 android:id="@+id/tv_chat_other_time"
                 style="@style/Theme.AppCompat.TextView.Regular.Gray07.Size10"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:layout_marginStart="5dp"
                 android:layout_marginBottom="2dp"
-                android:layout_weight="1"
                 android:minWidth="120dp"
                 app:layout_constraintBottom_toBottomOf="@id/tv_chat_other_message"
                 app:layout_constraintHorizontal_chainStyle="packed"
-                app:layout_constraintStart_toEndOf="@id/tv_chat_other_message"
+                app:layout_constraintEnd_toEndOf="parent"
                 tools:text="오후 2:23" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
